@@ -2,15 +2,14 @@
 \alias{convertRCV1Plain}
 \title{Transform a RCV1 Document to a Plain Text Document}
 \description{
-  Transform a Reuters Corpus Volume 1 XML document to a plain text
+  Transform a Reuters Corpus Volume 1 \acronym{XML} document to a plain text
   document.
 }
 \usage{
 convertRCV1Plain(node, ...)
 }
 \arguments{
-  \item{node}{an XML node representing a <newsitem></newsitem> element
-    from a well-formed RCV1 XML file.}
+  \item{node}{A \code{RCV1Document} representing a well-formed RCV1 \acronym{XML} file.}
   \item{...}{Arguments passed over by calling functions.}
 }
 \value{
@@ -19,7 +18,7 @@ convertRCV1Plain(node, ...)
 \seealso{\code{\link{asPlain}}}
 \examples{
 rcv1 <- system.file("texts", "rcv1", package = "tm")
-rcv1TDC <- Corpus(DirSource(rcv1), readerControl = list(reader = readRCV1, language = "en_US", load = TRUE))
+rcv1TDC <- Corpus(DirSource(rcv1), readerControl = list(reader = readRCV1))
 rcv1TDC[[1]]
 asPlain(rcv1TDC[[1]], convertRCV1Plain)
 }
