@@ -1,3 +1,8 @@
+2008-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/reader.R (readRCV1): Improved meta data extraction from
+	Reuters Corpus Volume 1 documents.
+
 2008-05-25  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/transform.R: Ensure that all mappings preserve multiline
